WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
138385
Un-anchor data detector popovers on scroll
https://bugs.webkit.org/show_bug.cgi?id=138385
Summary
Un-anchor data detector popovers on scroll
Beth Dakin
Reported
2014-11-04 16:41:18 PST
We should un-anchor or dismiss data detector popovers on scroll and at all of the other times that the dictionary lookup popover dismisses.
rdar://problem/18869345
Attachments
Pacth
(9.17 KB, patch)
2014-11-04 16:45 PST
,
Beth Dakin
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Beth Dakin
Comment 1
2014-11-04 16:45:16 PST
Created
attachment 240978
[details]
Pacth
WebKit Commit Bot
Comment 2
2014-11-04 16:48:01 PST
Attachment 240978
[details]
did not pass style-queue: ERROR: Source/WebCore/ChangeLog:10: You should remove the 'No new tests' and either add and list tests, or explain why no new tests were possible. [changelog/nonewtests] [5] Total errors found: 1 in 11 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 3
2014-11-04 16:50:28 PST
Comment on
attachment 240978
[details]
Pacth View in context:
https://bugs.webkit.org/attachment.cgi?id=240978&action=review
> Source/WebKit2/UIProcess/PageClient.h:228 > + virtual void dismissActionMenuDataDetetcorPopovers() = 0;
Detetcor
> Source/WebKit2/UIProcess/mac/WKActionMenuController.mm:167 > + // that and know whether or not it succeeded, so we'll settle for unachoring.
unachoring
Beth Dakin
Comment 4
2014-11-04 21:42:55 PST
Thanks Tim!
http://trac.webkit.org/changeset/175609
Beth Dakin
Comment 5
2014-11-04 21:52:37 PST
Build fix
http://trac.webkit.org/changeset/175610
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug