Un-anchor data detector popovers on scroll https://bugs.webkit.org/show_bug.cgi?id=138385 -and corresponding- rdar://problem/18869345

Reviewed by Tim Horton.

Source/WebCore:

* platform/spi/mac/DataDetectorsSPI.h:

Source/WebKit2:

Whenever we dismiss the dictionary popover, and on scroll, we should try to
dismiss the data detector popovers. Right now we don’t have the ability to know if
a dismiss succeeded, so we will settle for un-anchoring the popover.

* UIProcess/API/mac/WKView.mm:
(-[WKView viewDidMoveToWindow]):
(-[WKView _dismissActionMenuDataDetetcorPopovers]):
* UIProcess/API/mac/WKViewInternal.h:
* UIProcess/PageClient.h:
* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::didCommitLoadForFrame):
(WebKit::WebPageProxy::pageDidScroll):
(WebKit::WebPageProxy::resetStateAfterProcessExited):
* UIProcess/mac/PageClientImpl.h:
* UIProcess/mac/PageClientImpl.mm:
(WebKit::PageClientImpl::dismissActionMenuDataDetetcorPopovers):
* UIProcess/mac/WKActionMenuController.h:
* UIProcess/mac/WKActionMenuController.mm:
(-[WKActionMenuController dismissActionMenuDataDetetcorPopovers]):



Canonical link: https://commits.webkit.org/156230@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@175609 268f45cc-cd09-0410-ab3c-d52691b4dbfc