Source/WebKit2/UIProcess/WebPageProxy.cpp
@@ -2637,6 +2637,7 @@ void WebPageProxy::didCommitLoadForFrame(uint64_t frameID, uint64_t navigationID
     m_pageClient.resetSecureInputState();
     dismissCorrectionPanel(ReasonForDismissingAlternativeTextIgnored);
     m_pageClient.dismissDictionaryLookupPanel();
+    m_pageClient.dismissActionMenuDataDetectorPopovers();
 #endif
 
     clearLoadDependentCallbacks();
@@ -3326,6 +3327,7 @@ void WebPageProxy::pageDidScroll()
 {
     m_uiClient->pageDidScroll(this);
 #if PLATFORM(MAC)
+    m_pageClient.dismissActionMenuDataDetectorPopovers();
     dismissCorrectionPanel(ReasonForDismissingAlternativeTextIgnored);
 #endif
 }
@@ -4546,6 +4548,7 @@ void WebPageProxy::resetStateAfterProcessExited()
 #if PLATFORM(MAC)
     dismissCorrectionPanel(ReasonForDismissingAlternativeTextIgnored);
     m_pageClient.dismissDictionaryLookupPanel();
+    m_pageClient.dismissActionMenuDataDetectorPopovers();
 #endif
 
     PageLoadState::Transaction transaction = m_pageLoadState.transaction();
